update to assingment

--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    
- 
+    <!-- THIS PAGE ONLY SHOWS IF YOU ADD STUFF TO CART, PRODUCT NEEDS HREF"ORDER.HTML" BUT THATS IT -->
+    <!-- -->
     <meta charset="utf-8">
     <meta name="viewport"    content = "width=device-width, initial-scale=1">
     <meta name="description" content = "Discounted Loungefly Backpacks and Walletes found here!">
@@ -58,7 +58,7 @@
             <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
             <label class="myinput">Last Name*<input type="text" name="lname" id="lname" required placeholder="Last Name"></label>
             <label class="myinput">Street Name<input type="text" name="street" id="street" required placeholder="Street Address"></label>
-            <label class="myinput">City Name<input type="text" name="city" id="city" required placeholder="Street Address"></label>
+            <label class="myinput">City Name<input type="text" name="city" id="city" required placeholder="City Name"></label>
             <label class="myinput">State*<input type="text" name="Zip" id="zip" required pattern="[A-Z]{1,}"></label>
             <label class="myinput">Zip Code<input type="text" name="title" id="title" required pattern="[0-9Z\-]{5}"></label>
             <label class="myinput">Email*<input type="email" name="email" required placeholder="example@yourmail.com"></label>
