--- a/a-final-project/about-us.html
+++ b/a-final-project/about-us.html
@@ -57,6 +57,10 @@
             The About Us page provides information about the company and area and a Google Map of Salt Lake City.
             Include at least 2 images on this page that scale down at medium and small resolutions using a source set.
         </p>
+
+        <p> What is our passion? Input comment here</p>
+
+        <p>founded in 2024, we aim to find </p>
      
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193365.55885970534!2d-111.92048505!3d40.77660795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87523d9488d131ed%3A0x5b53b7a0484d31ca!2sSalt%20Lake%20City%2C%20UT!5e0!3m2!1sen!2sus!4v1720931548331!5m2!1sen!2sus"
