--- a/a-final-project/index.html
+++ b/a-final-project/index.html
@@ -23,6 +23,8 @@
     <script src="scripts/slideshow.js" defer></script>
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/darkmode.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
+    <script src="scripts/forecast.js" defer></script>
 
                     <!-- favicon -->
     <link rel="icon" href="images/favicon.ico">
@@ -55,9 +57,9 @@
                 <!-- hero image -->
         <div class="hero">
             <!-- TO DO : figure out why Link is not accepted in validator -->
-            <a href="order.html"><button title="call-to-action" id="hero-label">
+            <button onclick="window.location.href='order.html'" title="call-to-action" id="hero-label">
                 Shop New Arrivals
-            </button></a>
+            </button>
             
             <picture>                
                 <source media="(min-width: 699px)" srcset="images/hero-nemo-500x500.webp">
@@ -75,7 +77,8 @@
             <h2>Weather</h2>             
               <p>Current Temperature: <span id="temperature"></span>&deg;</p>
               <p> current wind: <span id="windspeed"></span> MPH </p>
-              <p>windchill:<span id="windchill"></span></p>
+              <p>Humidity:<span id="humidity"></span></p>
+              <!-- Professors Home page  -->
               <hr>
               <figure>
                 <img id="weather-icon" src="-" alt="weather-conditions">
@@ -104,7 +107,7 @@
 
             <section class="home-product">
                 <a href="order.html">
-                <img src="images/mousercise.webp" alt="mini backpack with Mickey, Minnie and Donald in excersize gear"> 
+                    <img src="images/mousercise.webp" alt="mini backpack with Mickey, Minnie and Donald in excersize gear"> 
                 </a>
                 <h3>Its time to Mousercise!</h3>
             </section> <!-- section "home-product" 2 -->
@@ -119,8 +122,7 @@
     </main>
 
 <footer>
-    <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo">
- <!-- f
+    <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100"> <!-- f
  Or break it to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME */ --> 
     <div class="contact-info">
         <p>Need Assistance? </p>
