--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -80,6 +80,21 @@
         <p>911 N 7th Avenue</p>
         <p>Salt Lake City, UT, 84102</p>  
     </div>
+    
+    <div class="social-media">
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="images/facebook-icon.svg" alt="Facebook" loading="lazy">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+            <img src="images/twitter-icon.svg" alt="Twitter" loading="lazy">
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+            <img src="images/instagram-icon.svg" alt="Instagram" loading="lazy">
+        </a>
+        <a href="https://www.tiktok.com" target="_blank">
+            <img src="images/tiktok-icon.svg" alt="TikTok" loading="lazy">
+        </a>
+    </div>
 
     <div class="copyright">
      <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
