--- a/a-final-project/index.html
+++ b/a-final-project/index.html
@@ -66,7 +66,7 @@
                 <source media="(min-width:300px)" srcset="images/hero-nemo-300x300.webp">
                 <source media="(max-width:299px)" srcset="images/hero-nemo-100x100.webp">
 
-                <img src="images/hero-nemo-300x300.webp" alt="three people happy with their loungefly Nemo bags">
+                <img src="images/hero-nemo-300x300.webp" alt="three people happy with their loungefly Nemo bags" loading="lazy">
             </picture>  
  
         </div> <!-- div class="hero" -->
@@ -81,7 +81,7 @@
               <!-- Professors Home page  -->
               <hr>
               <figure>
-                <img id="weather-icon" src="-" alt="weather-conditions">
+                <img id="weather-icon" src="-" alt="weather-conditions" loading="lazy">
                 <figcaption></figcaption>
               </figure>
               <hr>
@@ -100,21 +100,21 @@
             <section class="home-product">
                 
                 <a href="order.html">
-                <img src="images/chip-n-dale-wallet.webp" alt="chip and dale wallet with ice cream">
+                <img src="images/chip-n-dale-wallet.webp" alt="chip and dale wallet with ice cream" loading="lazy">
                 </a>
                 <h3>We’re going to go nuts over our next adventure!</h3>   
             </section>  <!-- "home-product" -->
 
             <section class="home-product">
                 <a href="order.html">
-                    <img src="images/mousercise.webp" alt="mini backpack with Mickey, Minnie and Donald in excersize gear"> 
+                    <img src="images/mousercise.webp" alt="mini backpack with Mickey, Minnie and Donald in excersize gear" loading="lazy"> 
                 </a>
                 <h3>Its time to Mousercise!</h3>
             </section> <!-- section "home-product" 2 -->
             
             <section class="home-product">
                 <a href="order.html">
-                <img src="images/pixar-monsters-unviversity.webp" alt="Mini backpack with Pixar Monsters Inc Univeristy Characters">                    
+                <img src="images/pixar-monsters-unviversity.webp" alt="Mini backpack with Pixar Monsters Inc Univeristy Characters" loading="lazy">                    
                 </a>
                 <h3>Major in Scare-onomics!</h3>                
             </section><!-- "home-product" 3 -->
@@ -122,7 +122,7 @@
     </main>
 
 <footer>
-    <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100"> <!-- f
+    <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100" loading="lazy"> <!-- f
  Or break it to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME */ --> 
     <div class="contact-info">
         <p>Need Assistance? </p>
@@ -133,6 +133,21 @@
     <div class="location">
         <p>911 N 7th Avenue</p>
         <p>Salt Lake City, UT, 84102</p>  
+    </div>
+
+    <div class="social-media">
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="images/facebook-icon.svg" alt="Facebook">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+            <img src="images/twitter-icon.svg" alt="Twitter">
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+            <img src="images/instagram-icon.svg" alt="Instagram">
+        </a>
+        <a href="https://www.tiktok.com" target="_blank">
+            <img src="images/tiktok-icon.svg" alt="TikTok">
+        </a>
     </div>
 
     <div class="copyright">
