--- a/a-final-project/order-confirmation.html
+++ b/a-final-project/order-confirmation.html
@@ -87,12 +87,12 @@
         </a>
     </div>
 
-    <div class="copyright">
-     <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
-        <a href="site-plan.html">Site-Plan</a>
-    </div>
+  
 </footer>
-
+<div class="copyright">
+    <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
+    <!-- <a href="site-plan.html">Site-Plan</a> -->
+</div>
 
 </body>
 </html>
