--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <!-- THIS PAGE ONLY SHOWS IF YOU ADD STUFF TO CART, PRODUCT NEEDS HREF"ORDER.HTML" BUT THATS IT -->
+    <!-- NOTE / TO DO: THIS PAGE ONLY SHOWS IF YOU ADD STUFF TO CART, PRODUCT NEEDS HREF"ORDER.HTML" BUT THATS IT -->
     <!-- -->
     <meta charset="utf-8">
     <meta name="viewport"    content = "width=device-width, initial-scale=1">
@@ -96,12 +96,12 @@
         </a>
     </div>
 
-    <div class="copyright">
-     <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
-        <a href="site-plan.html">Site-Plan</a>
-    </div>
+  
 </footer>
-
+<div class="copyright">
+   <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
+      <!-- <a href="site-plan.html">Site-Plan</a> -->
+  </div>
 
 </body>
 </html>
