--- a/a-final-project/about-us.html
+++ b/a-final-project/about-us.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="styles/larger.css">
 
                     <!-- JavaScript -->
-    <script src="scripts/slideshow.js" defer></script>
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/darkmode.js" defer></script>
 
@@ -98,8 +97,6 @@
 
 <footer>
     <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100">
- <!-- 
- Or break it to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME */ --> 
     <div class="contact-info">
         <p>Need Assistance? </p>
         <p><a href="mailto:EnchantedBackpacks@customerservice.com" target="_blank">EnchantedBackpacks@customerservice.com</a></p>
@@ -127,13 +124,14 @@
         </a>
     </div>
 
-    <div class="copyright">
-     <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
-        <a href="site-plan.html">Site-Plan</a>
-    </div>
+    
 
 </footer>
 
+<div class="copyright">
+    <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
+    <!-- <a href="site-plan.html">Site-Plan</a> -->
+</div>
 
 </body>
 </html>
