--- a/a-final-project/products.html
+++ b/a-final-project/products.html
@@ -89,13 +89,13 @@
         </a>
     </div>
 
-    <div class="copyright">
-     <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
-        <a href="site-plan.html">Site-Plan</a>
-    </div>
+   
 
 </footer>
-
+ <div class="copyright">
+     <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
+        <!-- <a href="site-plan.html">Site-Plan</a> -->
+    </div>
 
 </body>
 </html>
