--- a/a-final-project/index.html
+++ b/a-final-project/index.html
@@ -59,7 +59,7 @@
                 <!-- hero image -->
         <div class="hero">
             <!-- TO DO : figure out why Link is not accepted in validator -->
-            <button onclick="window.location.href='order.html'" title="call-to-action" id="hero-label">
+            <button onclick="window.location.href='products.html'" title="call-to-action" id="hero-label">
                 Shop New Arrivals
             </button>
             
@@ -77,7 +77,7 @@
 
         <div class="order-product"> 
             <h2>Order Information:</h2>
-            <p>link this to the js file</p>
+            <p><span id="order-count"> In Cart</span></p>
         </div>
     
         <section class="weather">
