--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -57,8 +57,8 @@
         <form method="GET" action="index.html">
             <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
             <label class="myinput">Last Name*<input type="text" name="lname" id="lname" required placeholder="Last Name"></label>
-            <label class="myinput">Street Name<input type="text" name="street" id="street" required placeholder="Street Address"></label>
-            <label class="myinput">City Name<input type="text" name="city" id="city" required placeholder="City Name"></label>
+            <label class="myinput">Street Name*<input type="text" name="street" id="street" required placeholder="Street Address"></label>
+            <label class="myinput">City Name*<input type="text" name="city" id="city" required placeholder="City Name"></label>
             <label class="myinput">State*<input type="text" name="Zip" id="zip" required pattern="[A-Z]{1,}"></label>
             <label class="myinput">Zip Code<input type="text" name="title" id="title" required pattern="[0-9Z\-]{5}"></label>
             <label class="myinput">Email*<input type="email" name="email" required placeholder="example@yourmail.com"></label>
