added cart to order and added cart info into products.

--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -66,6 +66,15 @@
             <label class="myinput">Gift Message<input type="text" name="bizname" placeholder="Want To Share A Message?"></label>         
             <button class="mysubmit"> Secure Your Order!</button>
         </form>
+
+     
+            <h2>Your Cart</h2>
+            <div id="cart-items"></div>
+            
+            <div id="cart-summary">
+                <p>Total Items: <span id="cart-total-items">0</span></p>
+                <p>Total Price: $<span id="cart-total-price">0.00</span></p>
+            </div>
     </main>
 
 <footer>
