--- a/a-final-project/products.html
+++ b/a-final-project/products.html
@@ -56,7 +56,12 @@
         <h1 class="title">Enchanted Backpacks</h1>   
         <div id="products-data" class="products-cards"></div>
                
-    </main>
+    </main> 
+    
+    <div id="cart-info">
+       <p> <span id="cart-count">0</span> items - <span id="cart-total">$0.00</span></p>
+    </div>
+
 
 <footer>
     <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo">
