--- a/a-final-project/index.html
+++ b/a-final-project/index.html
@@ -23,7 +23,7 @@
     <script src="scripts/hamburger.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/forecast.js" defer></script>
-    <script src="scripts/featured.js" defer></script>
+    <script src="scripts/display-featured.js" defer></script>
     
 
                     <!-- favicon -->
@@ -62,10 +62,10 @@
             
             <picture>                
                 <source media="(min-width: 699px)" srcset="images/hero-nemo-500x500.webp">
-                <source media="(min-width:300px)" srcset="images/hero-nemo-300x300.webp">
+                <source media="(min-width:450px)" srcset="images/hero-nemo-300x300.webp">
                 <source media="(min-width:299px)" srcset="images/hero-nemo-100x100.webp">
 
-                <img src="images/hero-nemo-300x300.webp" alt="three people happy with their loungefly Nemo bags" loading="lazy">
+                <img src="images/hero-nemo-100x100.webp" alt="three people happy with their loungefly Nemo bags">
             </picture> 
  
         </div> <!-- div class="hero" -->
@@ -127,17 +127,19 @@
         <a href="https://www.instagram.com" target="_blank">
             <img src="images/instagram-icon.svg" alt="Instagram">
         </a>
-        <a href="https://www.tiktok.com" target="_blank">
+        <a href="https://www.tiktok.com" target="_blank"> 
             <img src="images/tiktok-icon.svg" alt="TikTok">
         </a>
     </div>
-
-   
-</footer>
 <div class="copyright">
      <p>&copy; <span id='currentYear'></span>│ Enchanted Backpacks │ Salt Lake City, UT, USA" │  </p>
         <!-- <a href="site-plan.html">Site-Plan</a> -->
+    <a href="reference.html">References </a>
+    <p id='lastModified'></p>
 </div>
+   
+</footer>
+
 
 </body>
 </html>
