--- a/a-final-project/order-confirmation.html
+++ b/a-final-project/order-confirmation.html
@@ -23,7 +23,6 @@
                     <!-- JavaScript -->
     <script src="scripts/slideshow.js" defer></script>
     <script src="scripts/hamburger.js" defer></script>
-    <script src="scripts/darkmode.js" defer></script>
 
                     <!-- favicon -->
     <link rel="icon" href="images/favicon.ico">
@@ -33,7 +32,6 @@
 <body>
 
     <header>
-        <button title="dark mode" id="dark-mode"></button>
         <div id="logo">
             <a href="index.html">
                 <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100">
@@ -53,7 +51,7 @@
     </nav>  
 
     <main class="confirm-main">
-        <h2>Thank you for your order</h2>
+        <h2>Thank you for your order!</h2>
         <!-- TO DO : add javascript that shows customer how many orders they have on local storage -->
         <!-- <p span="order"></p> -->
 
