--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -23,17 +23,14 @@
                     <!-- JavaScript -->
     <script src="scripts/slideshow.js" defer></script>
     <script src="scripts/hamburger.js" defer></script>
-    <script src="scripts/darkmode.js" defer></script>
 
-                    <!-- favicon -->
-    <link rel="icon" href="images/favicon.ico">
+            <!-- favicon -->
+<link rel="icon" href="images/favicon.ico">
 
 </head>
 
 <body>
-
     <header>
-        <button title="dark mode" id="dark-mode"></button>
         <div id="logo">
             <a href="index.html">
                 <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100">
@@ -54,19 +51,24 @@
 
     <main class="order-main">
         <!-- HOW DO I ADD  Product Identifier - in a hidden field not visible to the user BELOW? Javascript I assume.-->
-        <form method="GET" action="index.html">
-            <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
-            <label class="myinput">Last Name*<input type="text" name="lname" id="lname" required placeholder="Last Name"></label>
-            <label class="myinput">Street Name*<input type="text" name="street" id="street" required placeholder="Street Address"></label>
-            <label class="myinput">City Name*<input type="text" name="city" id="city" required placeholder="City Name"></label>
-            <label class="myinput">State*<input type="text" name="Zip" id="zip" required pattern="[A-Z]{1,}"></label>
-            <label class="myinput">Zip Code<input type="text" name="title" id="title" required pattern="[0-9Z\-]{5}"></label>
-            <label class="myinput">Email*<input type="email" name="email" required placeholder="example@yourmail.com"></label>
-            <label class="myinput">Cell Phone*<input type="tel" name="cellphone" required placeholder="111-111-111"></label>
-            <label class="myinput">Gift Message<input type="text" name="bizname" placeholder="Want To Share A Message?"></label>         
-            <button class="mysubmit"> Secure Your Order!</button>
-        </form>
+
+        <section class="order-section">
+            <h2>Contact Information</h2>
+            <form method="GET" action="order-confirmation.html">
+                <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
+                <label class="myinput">Last Name*<input type="text" name="lname" id="lname" required placeholder="Last Name"></label>
+                <label class="myinput">Street Name*<input type="text" name="street" id="street" required placeholder="Street Address"></label>
+                <label class="myinput">City Name*<input type="text" name="city" id="city" required placeholder="City Name"></label>
+                <label class="myinput">State*<input type="text" name="Zip" id="zip" required pattern="[A-Z]{1,}"></label>
+                <label class="myinput">Zip Code<input type="text" name="title" id="title" required pattern="[0-9Z\-]{5}"></label>
+                <label class="myinput">Email*<input type="email" name="email" required placeholder="example@yourmail.com"></label>
+                <label class="myinput">Cell Phone*<input type="tel" name="cellphone" required placeholder="111-111-111"></label>
+                <label class="myinput">Gift Message<input type="text" name="bizname" placeholder="Want To Share A Message?"></label>         
+                <button class="mysubmit"> Secure Your Order!</button>
+            </form>
+        </section>
         
+        <section class="order-section">
             <h2>Your Cart</h2>
             <div id="cart-items"></div>
             
@@ -74,6 +76,9 @@
                 <p>Total Items: <span id="cart-total-items">0</span></p>
                 <p>Total Price: $<span id="cart-total-price">0.00</span></p>
             </div>
+        </section>
+
+
     </main>
 
 <footer>
