--- a/a-final-project/reference.html
+++ b/a-final-project/reference.html
@@ -23,7 +23,7 @@
     <script src="scripts/hamburger.js" defer></script>
 
                     <!-- favicon -->
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
 </head>
 
@@ -54,20 +54,21 @@
 
         <p> Images were found on the following pages:</p>
         <ul>
-            <li><a href="https://loungefly.com/">Loungefly</a></li>
-            <li><a href="https://www.boxlunch.com/brands/loungefly/"></a>Box [some number]</li>
-            <li><a href="https://www.amazon.com/"></a>Amazon</li>
-            <li><a href="https://707street.com/collections/loungefly"></a>707</li>   
+             <li><a href="https://www.boxlunch.com/brands/loungefly/">Boxlunch</a></li>
+             <li><a href="https://707street.com/collections/loungefly">707Street</a></li>  
+             <li><a href="https://loungefly.com/">Loungefly</a></li>
+             <li><a href="https://www.amazon.com/">Amazon</a></li>
+             
         </ul>
 
         <p>Assistance Credited to:</p>
 
         <ul>
-            <li>Brother Briggs: for Javascript and debugging</li>
-            <li> <a href="https://chatgpt.com/">Chatgbt</a> For Javascript and debugging</li>
-            <li><a href="https://www.w3schools.com/">W3Schools for clarification</a></li>
+            <li>Brother Briggs</li>
+            <li> <a href="https://chatgpt.com/">Chatgbt</a></li>
+            <li><a href="https://www.w3schools.com/">W3Schools</a></li>
+            <li><a href="https://www.iconfinder.com/icons">Icon Finder</a></li>
             <li>Cayleigh Leishman</li>
-            <li><a href="">Footer Social Media images:</a>Credit here</li>
         </ul>
 
     </main>
