--- a/a-final-project/order-confirmation.html
+++ b/a-final-project/order-confirmation.html
@@ -49,9 +49,6 @@
 
     <main class="confirm-main">
         <h2>Thank you for your order!</h2>
-        <!-- TO DO: add JavaScript that shows customer how many orders they have in local storage -->
-        <!-- <p span="order"></p> -->
-
         <section class="order-section">
             <h2>Your Cart</h2>
             <div id="products-data" class="products-cards"></div>
@@ -64,8 +61,7 @@
     </main>
 
     <footer>
-        <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100" loading="lazy"> <!-- f
-     Or break it to four sections, left is logo, left 1 is contacts middle is copyright and far right is social media like footer in this pagehttps://www.slc.gov/ **IF YOU GOT TIME */ --> 
+        <img src="images/enchanted-logo.webp" alt="Enchanted Backpacks Logo" width="100" height="100" loading="lazy"> 
         <div class="contact-info">
             <p>Need Assistance? </p>
             <p><a href="mailto:EnchantedBackpacks@customerservice.com" target="_blank">EnchantedBackpacks@customerservice.com</a></p>
