Update js validation

--- a/a-final-project/order.html
+++ b/a-final-project/order.html
@@ -56,12 +56,12 @@
             <form method="GET" action="order-confirmation.html">
                 <label class="myinput">First Name*<input id="fname" type="text" name="fname" required placeholder="First Name"></label>
                 <label class="myinput">Last Name*<input type="text" name="lname" id="lname" required placeholder="Last Name"></label>
-                <label class="myinput">Street Name*<input type="text" name="street" id="street" required placeholder="Street Address"></label>
+                <label class="myinput">Email*<input type="email" name="email" required placeholder="example@yourmail.com"></label>
+                <label class="myinput">Cell Phone*<input type="tel" name="cellphone" required placeholder="111-111-111"></label>
+                <label class="myinput">Street Address*<input type="text" name="street" id="street" required placeholder="Street Address"></label>
                 <label class="myinput">City Name*<input type="text" name="city" id="city" required placeholder="City Name"></label>
                 <label class="myinput">State*<input type="text" name="Zip" id="zip" required pattern="[A-Z]{1,}"></label>
                 <label class="myinput">Zip Code<input type="text" name="title" id="title" required pattern="[0-9Z\-]{5}"></label>
-                <label class="myinput">Email*<input type="email" name="email" required placeholder="example@yourmail.com"></label>
-                <label class="myinput">Cell Phone*<input type="tel" name="cellphone" required placeholder="111-111-111"></label>
                 <label class="myinput">Gift Message<input type="text" name="bizname" placeholder="Want To Share A Message?"></label>         
                 <input type='hidden' id="sku" name="sku">
                 <button class="mysubmit"> Secure Your Order!</button>
