validated and deleted uneccisary comments

--- a/a-final-project/about-us.html
+++ b/a-final-project/about-us.html
@@ -56,7 +56,6 @@
                 <source media="(min-width: 800px)" srcset="images/hero-nemo-500x500.webp">
                 <source media="(min-width:500px)" srcset="images/hero-nemo-300x300.webp">
                 <source media="(min-width:250px)" srcset="images/hero-nemo-100x100.webp">
-
                 <img src="images/hero-nemo-100x100.webp" alt="three people happy with their loungefly Nemo bags">
             </picture>  
         </div>
@@ -71,9 +70,8 @@
             giving you the very best of Loungefly bags, with a focus on quality, affordability, and customer service.
         </p>
 
-        <p>Founded in 2024, Discount Loungefly Bags has come a long way from its beginnings. When we first
-             started out, our passion for affordable luxury drove us to do tons of research so that Discount 
-             Loungefly Bags can offer you the best deals. We now serve customers from all over Salt Lake City and are 
+        <p>Founded in 2024, Discount Loungefly Bags 
+             started out as a way to sell affordable luxury. We now serve customers from all over Salt Lake City and are 
              thrilled that we're able to turn our passion into our own website.
         </p>
 
